@@ -6,8 +6,6 @@ from django.contrib.auth.base_user import AbstractBaseUser
 from django.contrib.auth.models import PermissionsMixin
 from django.db.models.signals import post_save
 from django.dispatch import receiver
-from pygments.lexers import get_all_lexers
-from pygments.styles import get_all_styles
 from django.template.defaultfilters import default
 from accounts.enums import RoleCodes
 import datetime
@@ -24,7 +22,6 @@ from PIL import Image
 from io import BytesIO
 from django.core.files.uploadedfile import InMemoryUploadedFile
 
-LEXERS = [item for item in get_all_lexers() if item[1]]
 
 
 # Create your models here.
